--- a/src/styles.css
+++ b/src/styles.css
@@ -1,22 +1,43 @@
+:root{
+    --colour1: #023C4D;
+    --colour2: #f8f8f8;
+    --colour3: #5ba95d;
+}
+
 body {
-    background-color: #f8f8f8;
+   margin: 0;
+   font-family: Arial, Helvetica, sans-serif;
 }
 
 .app-container {
-    min-height: 90vh;
-    min-width: 90vw;
+    min-height: 100vh;
+    min-width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url("../public/forest.jpg");
+    background-size: cover;
+    backdrop-filter: blur(5px);
+    
 }
 
+.app-container:before {
+    content: "";
+    position: absolute;
+    filter: blur(5px);
+    background: inherit;
+    z-index: -1; 
+    width: 100%;
+    height: 100%;
+  }
+
 .app-container >h1 {
-    color: #ff894c;
+    color: var(--colour1)
 }
 
 .quiz-container {
-    background-color: #ff894c;
+    background-color: var(--colour1);
     padding: 2rem;
     border-radius: 2%;
     max-width: 40rem;
@@ -25,7 +46,7 @@ body {
 }
 
 .quiz-text-container > * {
-    color: #f8f8f8;
+    color: var(--colour3);
     text-align: left;
 }
 
@@ -47,21 +68,22 @@ body {
 }
 
 li.answer-option:hover{
-    background-color: #f8f8f8;
-    color: #ff894c;
+    background-color: var(--colour2);
+    color: var(--colour1);
 } 
 
 .quiz-button{
-    color: #f8f8f8;
-    background-color:#ff894c;
+    color: var(--colour3);
+    background-color: var(--colour1);
     padding: 0.5rem;
     border-style: solid;
     border-width: 0.01rem;
     border-radius: 2%;
-    border-color: #f8f8f8;
+    border-color: var(--colour3);
 }
 
 .quiz-button:active{
-    color:#ff894c;
-    background-color: #f8f8f8;
+    color:var(--colour1);
+    background-color: var(--colour2);
+    border-color: var(--colour2);
 }
